Fixed: Whitespace on Sticky sidebar and Samples headings, styles updated

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -16,7 +16,7 @@ h1, h2, h3, h4 {
 #sidebar {
     position: -webkit-sticky;
     position: sticky;
-    top: 0;
+    top: 40px;
     height: 25vh;
 }
 
@@ -36,3 +36,6 @@ h1, h2, h3, h4 {
 
 }
 
+th {
+    background: #202326;
+}
